--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -21,12 +21,12 @@ PageImages:
 #  can_upload: false
 
 # Set allowed extensions for images
-# Default [jpg,jpeg,gif,png]
+# Default limited to types known by file category image
 #  allowed_extensions:
-    - jpg
-    - jpeg
-    - gif
-    - png
+#    - jpg
+#    - jpeg
+#    - gif
+#    - png
 
 # Set allowed maximum filesize for images
 # Default = 1048576 = 1MB (1* 1024 * 1024)
