--- a/_config/config.yml
+++ b/_config/config.yml
@@ -39,3 +39,8 @@ Page:
 #BlogPost:
 #  extensions:
 #    - PageImages
+
+# Use pageimage to extend Object Image
+Image:
+  extensions:
+    - PageImage
